# safepm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  should_crash.sh  test.sh  vscode_init.sh
artifact_evaluation/: README.md  figure_3.sh  figure_4.sh  figure_5.sh  figure_6.sh  figure_7.sh  reproduce_bugs.sh  run.sh  run_all.sh  run_crash_consistency.sh  run_pmembench.sh  run_pmemkv.sh  run_ripe.sh  safepm_figures.sh  table_4.sh  valgrind_summary.sh
benchmarks/: README.md
benchmarks/bugs/: Dockerfile  README.md  bug1_btree.sh  bug2_tx.sh  change_pmembench_bugs_file_path.sh  safepm_bugs.sh
benchmarks/crash_consistency/: Dockerfile  README.md  change_pmembench_file_path.sh  inner_run.sh  run-variants.sh
benchmarks/pmembench/: Dockerfile  README  README.md  change_pmembench_file_path.sh  pmdk_remove_asan.patch  pmembench.patch  pmembench_partial_cov.patch  pmembench_vanilla_partial_cov.patch  run-variants.sh  run.sh
benchmarks/pmembench_map/: Dockerfile  README  pmembench.patch  run.sh
benchmarks/pmemkv/: .dockerignore  Dockerfile_asan  Dockerfile_safepm  Dockerfile_vanilla  README.md  pmasan.patch  pmemkv_asan.patch  pmemkv_bench_asan.patch  run-all.sh  run-pmemkv-bench-delete.sh  run-pmemkv-bench-fill.sh  run-pmemkv-bench-numops.sh  run-pmemkv-bench-randomreadwrite.sh  run-pmemkv-bench-read.sh  run-variants.sh
benchmarks/recovery_time/: Dockerfile  Makefile  README.md  inner_run.sh  recovery_table.sh  run-variants.sh
benchmarks/recovery_time/source/: recovery_run.c
benchmarks/ripe/: Dockerfile_asan  Dockerfile_asan_pmemobj_heap  Dockerfile_asan_system_heap  Dockerfile_intact  Dockerfile_memcheck  Dockerfile_safepm  Makefile  Readme.md  memcheck.patch  ripe_tester.py  run-variants.sh
benchmarks/ripe/source/: attack_gen.c  attack_gen.h  attack_gen_pmemobj_heap.c  attack_gen_system_heap.c
example/example1/: CMakeLists.txt  example1.cpp
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  example1.cpp
include/: libpmemobj_secure.h
plot_utils/: analyse.py  generate_plots.py  import_pmemkv.sh  plot.py  plot_all.sh  plot_config_open_create.yml  plot_config_partial_coverage.yml  plot_config_pmembench_tx.yml  plot_config_pmemkv.yml  plotters.py
plotters/: .gitignore  README  analyse.py  generate_plots.py  import_pmembench.sh  import_pmembench_map.sh  import_pmemkv.sh  parser.py  plot.py  plot_config_maps.yml  plot_config_open_create.yml  plot_config_partial_coverage.yml  plot_config_pmembench_tx.yml  plot_config_pmemkv.yml  plotters.py
plotters_paper/: README  analyse.py  import_pmemkv.sh  plot.py  plot_all.sh  plot_config_maps.yml  plot_config_open_create.yml  plot_config_pmembench_tx.yml  plot_config_pmemkv.yml  plotters.py
src/: common.h  libpmemobj_secure.cpp  overmap_shadow_mem.cpp  overmap_shadow_mem.h
tests/: CMakeLists.txt  alloc_tx_abort.cpp  common.h  double_free.cpp  double_free_ntx.cpp  free_tx_abort.cpp  int32.cpp  mismatched_free.cpp  overflow.cpp  overflow_ntx.cpp  overflow_persistence.sh  overflow_persistence_helper.cpp  root_overflow.cpp  root_underflow.cpp  tx_add_overflow.cpp  use_after_free.cpp  use_after_free_ntx.cpp  use_after_realloc.cpp  zalloc.cpp
utils/: CMakeLists.txt  pool_overhead.cpp
