cmake_minimum_required (VERSION 3.1)

function (spmo_test target)
	add_executable("${target}.exe" "${target}.cpp")
	add_dependencies("${target}.exe" pmdk)
	target_compile_options("${target}.exe" PRIVATE "-fsanitize=address")
	target_link_options("${target}.exe" PRIVATE "-fsanitize=address")
	target_link_libraries("${target}.exe" libpmemobj.a libpmem.a ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT} ndctl daxctl)
	target_include_directories("${target}.exe" PUBLIC "${PMDK_INSTALL_DIR}/include")
	target_link_directories("${target}.exe" PUBLIC "${PMDK_INSTALL_DIR}/lib/pmdk_debug")
endfunction()

spmo_test(double_free)
spmo_test(use_after_free)
spmo_test(mismatched_free)
spmo_test(overflow)
spmo_test(int32)
